[metadata]
name = ooq
version = 0.0.1
url = https://github.com/otosense/ooq
packages = 
		ooq
include_package_data = True
platforms = any
description_file = README.md
description-file = README.md
description = Quick access to code favorites
license = mit
root_url = https://github.com/otosense/
author = OtoSense

